# RetailFlow-AI

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml
.github/workflows/: cd.yml  ci.yml
ai-service/: Dockerfile  requirements.txt
ai-service/app/: __init__.py  main.py
ai-service/app/core/: __init__.py  config.py
ai-service/app/cv/: __init__.py
ai-service/app/ml/: __init__.py
ai-service/models/: README.md
ai-service/tests/: __init__.py
backend/: Dockerfile  alembic.ini  pyproject.toml  requirements-dev.txt  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 001_create_users_refresh_tokens.py  002_create_stores_counters_store_managers.py  003_create_queue_tables.py  004_create_camera_zones.py  005_create_notifications.py
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py
backend/app/api/v1/: __init__.py
backend/app/api/v1/analytics/: __init__.py  router.py
backend/app/api/v1/auth/: __init__.py  dependencies.py  router.py
backend/app/api/v1/cameras/: __init__.py  router.py
backend/app/api/v1/ml/: __init__.py  router.py
backend/app/api/v1/notifications/: __init__.py  router.py
backend/app/api/v1/queues/: __init__.py  router.py
backend/app/api/v1/stores/: __init__.py  router.py
backend/app/core/: __init__.py  config.py  database.py  queue_state.py  redis.py  security.py
backend/app/models/: __init__.py  camera.py  notification.py  queue.py  store.py  user.py
backend/app/repositories/: __init__.py  alert_repository.py  analytics_repository.py  camera_repository.py  counter_repository.py  notification_repository.py  queue_repository.py  store_repository.py  token_repository.py  user_repository.py
backend/app/schemas/: __init__.py  analytics.py  auth.py  camera.py  common.py  notification.py  queue.py  store.py
backend/app/services/: __init__.py  analytics_service.py  auth_service.py  notification_service.py  queue_service.py  store_service.py
backend/app/websocket/: __init__.py  connection_manager.py  router.py
backend/cv_service/: __init__.py  config.py  detector.py  main.py  processor.py  queue_updater.py  requirements.txt  simulator.py  zone_counter.py
backend/ml_service/: __init__.py  config.py  data_loader.py  features.py  predictor.py  requirements.txt  trainer.py
backend/tests/: __init__.py  conftest.py  test_health.py
backend/tests/integration/: __init__.py  test_analytics_routes.py  test_auth_routes.py  test_camera_routes.py  test_notification_routes.py  test_queue_routes.py  test_store_routes.py
backend/tests/unit/: __init__.py  test_analytics_service.py  test_connection_manager.py  test_features.py  test_notification_service.py  test_predictor.py  test_queue_service.py  test_security.py  test_zone_counter.py
docker/postgres/: init-multiple-databases.sh
docs/: ARCHITECTURE.md  HLD.md  LLD.md  PRD.md  USER_STORIES.md
frontend/: .eslintrc.json  Dockerfile  next.config.mjs  next.config.ts  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
frontend/src/: middleware.ts
frontend/src/app/: globals.css  layout.tsx  not-found.tsx  providers.tsx
frontend/src/app/(auth)/: layout.tsx
frontend/src/app/(auth)/login/: page.tsx
frontend/src/app/(auth)/register/: page.tsx
frontend/src/app/(dashboard)/: layout.tsx
frontend/src/app/(dashboard)/analytics/: page.tsx  (+1 more)
frontend/src/components/analytics/: HeatmapChart.tsx  TrendChart.tsx
frontend/src/components/auth/: LoginForm.tsx  RegisterForm.tsx
frontend/src/components/dashboard/: CounterCard.tsx
frontend/src/components/layout/: DashboardShell.tsx  NotificationBell.tsx  Sidebar.tsx  Topbar.tsx
frontend/src/components/ui/: badge.tsx  dropdown-menu.tsx  progress.tsx
frontend/src/hooks/: useAnalytics.ts  useAuth.ts  useLiveQueue.ts  useNotifications.ts  useStores.ts
frontend/src/store/: authStore.ts  notificationStore.ts  queueStore.ts  storeStore.ts
frontend/src/types/: analytics.ts  api.ts  auth.ts  ml.ts  notification.ts  queue.ts  store.ts  websocket.ts
(+12 files in other folders)
