[tool.ruff]
# Ruff configuration (Python linter + formatter)
target-version = "py312"
line-length = 100
indent-width = 4

[tool.ruff.lint]
# Enable rules
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "ARG",  # flake8-unused-arguments
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking
    "ANN",  # flake8-annotations (type hints)
    "S",    # flake8-bandit (security)
    "N",    # pep8-naming
]

ignore = [
    "ANN101",   # Missing type annotation for `self`
    "ANN102",   # Missing type annotation for `cls`
    "ANN401",   # Allow `Any` type
    "S101",     # Allow `assert` (used in tests)
    "B008",     # Allow function calls in argument defaults (FastAPI Depends)
    "N805",     # Allow `cls` in validators
]

# Allow autofix
fixable = ["ALL"]
unfixable = []

# Exclude paths
exclude = [
    ".git",
    ".venv",
    "venv",
    "__pycache__",
    "alembic/versions",
    "build",
    "dist",
]

[tool.ruff.lint.per-file-ignores]
# Allow unused imports in __init__.py files
"__init__.py" = ["F401"]
# Allow assert and missing annotations in tests
"tests/**/*.py" = ["S101", "ANN", "ARG"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint.isort]
known-first-party = ["app"]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]

# =============================================================================
# Mypy — Static type checking
# =============================================================================
[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
exclude = ["alembic/", "tests/"]

[[tool.mypy.overrides]]
module = ["app.api.*", "app.schemas.*"]
# Allow less strict checking on API boundary types
warn_return_any = false

# =============================================================================
# Pytest — Test runner configuration
# =============================================================================
[tool.pytest.ini_options]
# Test discovery
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

# Asyncio mode
asyncio_mode = "auto"

# Markers
markers = [
    "unit: Unit tests (no external dependencies)",
    "integration: Integration tests (requires DB + Redis)",
    "slow: Tests that take > 1 second",
]

# Coverage
addopts = [
    "--strict-markers",
    "--tb=short",
    "--cov=app",
    "--cov-report=term-missing",
    "--cov-fail-under=80",
]

# =============================================================================
# Coverage — Configuration
# =============================================================================
[tool.coverage.run]
source = ["app"]
omit = [
    "app/scripts/*",
    "app/core/config.py",    # Configuration — hard to unit test
    "tests/*",
    "*/__init__.py",
]
branch = true

[tool.coverage.report]
fail_under = 80
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "pass",
]

# =============================================================================
# Project metadata
# =============================================================================
[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "retailflow-ai-backend"
version = "1.0.0"
description = "RetailFlow AI — Core API Backend (FastAPI)"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "RetailFlow AI Engineering Team" }]
